<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IncTalk</string>

    <!-- Menu items -->
    <string name="menu_start_chat">Начать беседу</string>
    <string name="menu_messages">Диалоги</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about_application">О приложении</string>

    <!-- about -->
    <string name="about_title">О приложении</string>
    <string name="about_app_name_formatter">IncTalk %1$s</string>

    <string name="about_rate">Оценить приложение</string>
    <string name="about_update">Проверить обновления</string>
    <string name="about_report">Сообщить об ошибке</string>
    <string name="about_author">Тулупов Евгений © 2013</string>
    <string name="about_author_contacts">http://vk.com/etulupov</string>


    <!-- date format -->
    <string name="date_yesterday">Вчера</string>
    <string name="dialog_exit_title">Завершить диалог</string>
    <string name="dialog_exit_confirm">Вы действительно хотите завершить текущий диалог?</string>

    <string name="dialog_delete_title">Удаление диалога</string>
    <string name="dialog_delete_confirm">Вы действительно хотите удалить диалог?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>

    <string name="messages_image_type">Изображение</string>
    <string name="messages_empty">Список диалогов пуст.\nЧтобы начать беседу,\nнажмите кнопку \'+\'.</string>
    <string name="menu_attach_take_photo">Сделать снимок</string>
    <string name="menu_attach_import_photo">Выбрать из галереи</string>
    <string name="dialog__items_title">Выберите</string>

    <string-array name="messages_attach_actions">
        <item>Сделать снимок</item>
        <item>Выбрать из галереи</item>
    </string-array>
    <string-array name="messages_chat_actions">
        <item>Удалить беседу</item>
    </string-array>

    <string name="chat_default_title_formatter">Диалог #%1$d</string>

    <string name="conversations_title">Диалоги</string>
    <string name="fgt_welcome_title">Настройки</string>
    <string name="fgt_welcome_back">Назад</string>
    <string name="typing_message">набирается сообщение...</string>
    <string name="send_button">Отпр.</string>
    <string name="send_hint">Введите сообщение</string>
    <string name="search_enter_your_university">Ваш университет</string>
    <string name="search_enter_target_university">Искомый университет</string>
    <string name="search_enter_your_age">Ваш возраст</string>
    <string name="search_enter_your_gender">Ваш пол</string>
    <string name="search_enter_target_gender">Искомый пол</string>
    <string name="search_enter_target_age">Искомый возраст</string>
    <string name="search_next">Далее</string>
    <string name="search_save">Сохранить</string>
    <string name="search_finish">Начать диалог</string>
    <string name="search_start">Продолжить!</string>
    <string name="search_start_title">Добро пожаловать!</string>
    <string name="search_start_hint">Приветствуем Вас\nв чате IncTalk!</string>
    <string name="search_start_hint_2">Пожалуйста, заполните\nпараметры поиска.</string>
    <string name="search_finish_hint">Поздравляем! Теперь можно приступить к общению ;)</string>
    <string name="search_finish_hint_2">Параметры поиска Вы можете изменить в разделе "Настройки".</string>
    <string name="search_nothing_selected">Пожалуйста выберите какой-либо вариант</string>
    <string name="search_university_error">Во время загрузки списка университетов произошла ошибка</string>
    <string-array name="search_your_gender">
        <item>Не важно</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string-array name="search_target_gender">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string-array name="search_your_age">
        <item>Не скажу</item>
        <item>До 16</item>
        <item>От 16 до 18</item>
        <item>От 19 до 21</item>
        <item>От 22 до 25</item>
        <item>От 26 и выше</item>
    </string-array>
    <string-array name="search_target_age">
        <item>До 16</item>
        <item>От 16 до 18</item>
        <item>От 19 до 21</item>
        <item>От 22 до 25</item>
        <item>От 26 и выше</item>
    </string-array>

    <string-array name="search_your_university">
        <item>Не важно</item>
    </string-array>
    <integer-array name="search_your_university_ids">
        <item>0</item>
    </integer-array>
</resources>
